# Baremeatal_Behavioural_Identification

./: .cproject  .project  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  bme280_sensor.c  bme280_sensor.h  dynamic_data.c  dynamic_data.h  json_builder.c  json_builder.h  mq_sensor.c  mq_sensor.h  mqtt_manager.c  mqtt_manager.h  port_monitor.c  port_monitor.h  sensor_manager.c  sensor_manager.h  static_data.c  static_data.h  uart_checker.c  uart_checker.h  wifi_manager.c  wifi_manager.h
